--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="content">
         <div id="pctArea">pctArea</div>
         <div id="btnsArea">
-            <div id="bNazad">wstecz</div>
-            <div id="bWpieriod">naprzod</div>
+            <div id="bNazad"><p>&#10229;</p></div>
+            <div id="bWpieriod"><p>&#10230;</p></div>
         </div>
     </div>
 </body>
