pierwsze obrazki i dzwiek

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 
 <body>
     <div id="content">
-        <div id="pctArea">pctArea</div>
+        <div id="pctArea"></div>
         <div id="btnsArea">
-            <div id="bNazad"><p>&#10229;</p></div>
-            <div id="bWpieriod"><p>&#10230;</p></div>
+            <div id="bNazad"    onclick="dajPrevPicture()"><p>&#10229;</p></div>
+            <div id="bWpieriod" onclick="dajNextPicture()"><p>&#10230;</p></div>
         </div>
     </div>
+
+    <script src="mprzegladarka.js"></script>
+
 </body>
 
 </html>
