--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <meta name="author"     content="tata Marcina, autyzmsoft" />
+    <meta name="keywords"   content="Autyzm, mowa bierna, etykietowanie przedmiotów, gry online dla dzieci autystycznych" />
+    <meta name="description" content="Aplikacja do ćwiczenia mowy biernej" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>MPrzeglądarka</title>
     <link rel="stylesheet" href="style.css">
 
