buttony z lewej i prawej przy horizontal screen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <p>&#10230;</p>
             </div>
         </div>
+
+        <div id="bLewy"  onclick="dajNextPicture()">lewy</div>
+        <div id="bPrawy" onclick="dajPrevPicture()">prawy</div>
+
+
     </div>
 
     <div id="homepage">
