--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
         </div>
 
-        <div id="bLewy"  onclick="dajNextPicture()">lewy</div>
-        <div id="bPrawy" onclick="dajPrevPicture()">prawy</div>
+        <div id="bLewy"  onclick="dajNextPicture()"><p>&#10229;</p></div>
+        <div id="bPrawy" onclick="dajPrevPicture()"><p>&#10230;</p></div>
 
 
     </div>
