dodanie kodu GAnalytics

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <a href="https://autyzmsoft.pl" title="strona główna" aria-current="page"><i class="fas fa-home"></i></a>
     </div>
 
+    <script type="text/javascript">// <![CDATA[
+        var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-20680235-2']); _gaq.push(['_trackPageview']); (function () { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
+// ]]></script>
+
     <script src="mprzegladarka.js"></script>
 
 </body>
