--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="author"     content="tata Marcina, autyzmsoft" />
     <meta name="keywords"   content="Autyzm, mowa bierna, etykietowanie przedmiotów, gry online dla dzieci autystycznych" />
-    <meta name="description" content="Aplikacja do ćwiczenia mowy biernej" />
+    <meta name="description" content="Aplikacja do ćwiczenia mowy biernej, autyzm" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -32,6 +32,7 @@
             </div>
         </div>
 
+        <!-- alternatywne klawisze na wypada mobilnych horyzontalnych: -->
         <div id="bLewy"  onclick="dajPrevPicture()"><p>&#10229;</p></div>
         <div id="bPrawy" onclick="dajNextPicture()"><p>&#10230;</p></div>
 
